--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,19 +4,15 @@
     </head>
     <body>
         <div>
-            <h1><a href="/">Brawl Stars Blog</a></h1>
+            <h1><a href="/">Django Girls Blog</a></h1>
         </div>
-
-        <div>
-            <p>published: 27.04.2022, 20:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>The first post and the first step of this incredible journey! El Primo sucks in my opinion</p>
-        </div>
-
-        <div>
-            <p>published: 27.04.2022, 20:17</p>
-            <h2><a href="">My second post</a></h2>
-            <p>The second post guys! Amber is a bitch, just thinking about her gives me headaches</p>
-        </div>
+        
+        {% for post in posts %}
+            <div>
+                <h1><a href="">{{ post.title }}</a></h1>
+                <p>published: {{ post.published_date }}</p>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
     </body>
 </html>
